cells: stop using deprecated Class#newInstance
The Class#newInstance in favor of clazz.getDeclaredConstructor().newInstance()

Acked-by:
Target: master
Require-book: no
Require-notes: no